# docker-semantic-search

./: .env.example  .gitignore  README.md  compose.yaml  run
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/nginx/: nginx.conf
infra/opensearch/: opensearch.yml
sample-data/: documents.csv  documents.json  documents.jsonl  documents.tsv
src/apps/api/: pyproject.toml
src/apps/api/src/semantic_search_api/: __init__.py  logging.py  main.py  settings.py
src/apps/api/src/semantic_search_api/routers/: chat.py  collections.py  health.py  jobs.py  search.py  uploads.py
src/apps/web/: index.html  package.json
src/apps/web/src/: index.css
src/apps/web/src/app/: App.tsx  api.ts
src/apps/web/src/app/components/: BackgroundJobs.tsx  DocumentModal.tsx
src/apps/web/src/app/context/: JobsContext.tsx
src/apps/web/src/app/pages/: Collection.tsx  Home.tsx
src/apps/worker/: pyproject.toml
src/apps/worker/src/semantic_search_worker/: __init__.py  main.py  settings.py  tasks.py
